# 3D-graphics-and-physics-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  \  main.cpp  profile.py
.cache/clangd/index/: Collider.cpp.7827466F2901BD4D.idx  Colliders.h.5BE81607F3A42A90.idx  ConvexCollider.cpp.351AD02A4C33D440.idx  GLAuxElements.cpp.C2C010A30E7C0D92.idx  GLAuxElements.h.DF60BAC3EF74089E.idx  GLBase.h.C674BE35CA3B425D.idx  GLCone.cpp.2F747908C9AE478E.idx  GLCone.h.2F49F2A1CF9F4FEA.idx  GLCube.cpp.C5CBE433F01F310F.idx  GLCube.h.37A08DA0244725B4.idx  GLCubemap.cpp.4F73F4675AEB11B7.idx  GLCubemap.h.CBAB13124E52384C.idx  GLCylinder.cpp.EF3E439C75146B2C.idx  GLCylinder.h.0BBEA1777CBC343C.idx  GLElemObject.h.55259C354CB418BE.idx  GLGUIRenderer.h.CDD0110D9538B60A.idx  GLGeometry.h.760621FD8D1D29A4.idx  GLObject.h.EF4855C907C16515.idx  GLPolyhedron.cpp.0CBE9F87765CCBD8.idx  GLPolyhedron.h.38D6D549546229E0.idx  GLQuad.cpp.BCD096C45A0CC77D.idx  GLQuad.h.B145D1A85A57F717.idx  GLSandbox.cpp.8618147968139511.idx  GLSandbox.h.F6D612B9C90B1A31.idx  GLSandboxBase.cpp.638DA2BDCEDBFABA.idx  GLSphere.cpp.E4AFDDA8BDD03F29.idx  GLSphere.h.3656643C78F27456.idx  GLTextRenderer.cpp.53DA8EDC910046A0.idx  GLTextRenderer.h.2ED2FEB94EF798E8.idx  Physics.h.D43FB755C2BEA747.idx  PhysicsBody.cpp.D70EF748C6AA3A1F.idx  PhysicsBody.h.038444D7EE7917FE.idx  PhysicsWorld.cpp.90232861A56144EF.idx  PhysicsWorld.h.05A9ED15721739C1.idx  PlaneCollider.cpp.E9A35F749873FBEA.idx  SphereCollider.cpp.AA6E49675D28BEB3.idx  _fixes.hpp.BE625AE274068F6E.idx  _vectorize.hpp.D292C288F420C5A5.idx  application.cpp.B088574BB0A96C45.idx  application.h.FF047775E215DB6E.idx  (+215 more)
.obsidian/: workspace.json
examples/Plane_simulator/: CMakeLists.txt  main.cpp
examples/Plane_simulator/src/: PlaneSim.cpp  PlaneSim.h  PlaneSimBase.cpp
examples/Sandbox/: CMakeLists.txt  main.cpp
examples/Sandbox/.cache/clangd/index/: Sandbox.cpp.5BFD592D9F37BE7A.idx  Sandbox.h.0AD1ADB0FC42C2F9.idx  SandboxBase.cpp.76D9F70816F55694.idx  main.cpp.A25C69D3CFC4E921.idx
examples/Sandbox/src/: Sandbox.cpp  Sandbox.h  SandboxBase.cpp
shaders/: fragment.glsl  vertex.glsl
shaders/GLBase/: defGeometryPassFragment.glsl  defGeometryPassFragmentWithTextures.glsl  defGeometryPassVertex.glsl  defGeometryPassVertexWithTextures.glsl  defLightingPassFragment.glsl  defLightingPassVertex.glsl  defRenderQuadFragment.glsl  defRenderQuadPostproFragment.glsl  defRenderQuadVertex.glsl  renderQuadVertex.glsl  shadowMapCascadedFragment.glsl  shadowMapCascadedGeometry.glsl  shadowMapCascadedVertex.glsl  shadowMapFragment.glsl  shadowMapSpotFragment.glsl  shadowMapSpotVertex.glsl  shadowMapVertex.glsl
shaders/GLGeometry/: GUIFragment.glsl  lineFragment.glsl  pointFragment.glsl  pointGeometry.glsl  pointVertex.glsl  skyboxFragment.glsl  skyboxFragmentAtmosphere.glsl  skyboxFragmentFlat.glsl  skyboxVertex.glsl  tessellationGPassFragment.glsl  tessellationGPassTessCtrl.glsl  tessellationGPassTessEval.glsl  tessellationGPassVertex.glsl  textFragment.glsl  textVertex.glsl
src/: .ccls  GLSandbox.cpp  GLSandbox.h  GLSandboxBase.cpp
src/GLBase/: CMakeLists.txt  GLBase.h
src/GLBase/src/: application.cpp  application.h  camera.cpp  camera.h  deferredRenderer.cpp  deferredRenderer.h  inputHandler.cpp  inputHandler.h  light.cpp  light.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  stb_image.cpp  utils.cpp  utils.h
src/GLGeometry/: CMakeLists.txt  GLGeometry.h  GLGeometryAux.h
src/GLGeometry/src/: GLAuxElements.cpp  GLAuxElements.h  GLCone.cpp  GLCone.h  GLCube.cpp  GLCube.h  GLCubemap.cpp  GLCubemap.h  GLCylinder.cpp  GLCylinder.h  GLElemObject.h  GLGUIRenderer.cpp  GLGUIRenderer.h  GLGizmo.cpp  GLGizmo.h  GLObject.h  GLParticleSystem.cpp  GLParticleSystem.h  GLPolyhedron.cpp  GLPolyhedron.h  GLQuad.cpp  GLQuad.h  GLSphere.cpp  GLSphere.h  GLTerrainPatch.cpp  GLTerrainPatch.h  GLTextRenderer.cpp  GLTextRenderer.h
src/GLSandbox/: GLSandbox.cpp  GLSandbox.h  GLSandboxBase.cpp
src/GLSandbox_old/: GLSandbox.cpp  GLSandbox.h  GLSandboxBase.cpp
src/Physics/: CMakeLists.txt  Physics.h
src/Physics/src/: Collider.cpp  Colliders.h  ConvexCollider.cpp  ForceGenerator.cpp  ForceGenerator.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsWorld.cpp  PhysicsWorld.h  PlaneCollider.cpp  SphereCollider.cpp  Terrain.cpp  Terrain.h
src/Physics_old/: CMakeLists.txt
src/Physics_old/src/: ConvexCollider.cpp  PhysicsBody.h  PhysicsWorld.cpp
src/Utils/: CMakeLists.txt  utils.h
src/Utils/src/: logger.h
